--- a/000-preface.org
+++ b/000-preface.org
@@ -151,6 +151,90 @@ And that was the end of The Battle of the Snake-Meal. It really was over just ab
 
 A quiet, knowing laugh from audience makes its way around the burrow.
 
+Verk slowly sat back in his carefully shaped and ornamented stone chair. He slowly interlaced his fingers over his remarkably big belly, let out long, slow, quiet sigh, and seemed to be challenging the audience to interrupt his rest.
+
+Indeed, no one was quite sure what to do. It was understood that you stay seated and reverent, but meanwhile your mind was sprinting around trying to guess exactly the right posture and tilt of the head, much less /saying/ anything. It was a very quiet sort of panic.
+
+It had been a while, possibly the longest pause-for-effect at the time. "What if he he's /dead/?", some of the audience dared to allow themselves to wonder. The followup thoughts varied considerably.
+
+Verk slowly opened his eyes. "Now, do any of the precious children in our audience have any questions? Maybe, do you get an idea of what I'm trying to say here?" For Verk especially loved the children's questions.
+
+One of the older cousins stood, and looked behind him at his nervous mother.
+
+"Father-Brother Verk, why was the boulder-rhino kept a secret from the Crec army?"
+
+Verk was sure had covered this, and was duly annoyed. He stared at the boy for what seemed like a very long time. Naturally the boy fidgeted.
+
+"Little rhino-calf, do you remember me talking about that? It's not known nor is it to be known. You're a clever lad. Have a seat, please."
+
+A girl in her late teens, that could only cheritably be considered a child stood, /with some off-putting confidence/, Verk thought. Likely a lovely child. Well, shaped.
+
+"Father-Brother Verk," Verk thought she had rushed the whole name thing, "Were there any other things we could have done to avoid all this dying, for everybody?"
+
+Verk knew that putting his hand anywhere near his face would it would, all by itself, gently cradle his forehead. He did not want to be unpleasant to the girl, but Verk's near exhausted patience with this Two-Squirrel-Hoard generation was getting to breaking point more and more all the time. /In a pitiful and disrespectful state, that lot/, he would often think, for example.
+
+"Miss." He thought he would mix in just a dash of good-talking-to, as a signal to others as well. "I believe a lot of dedicated Forest Heros put in a lot of blood, sweat, and dare I say lives, in far too many cases."
+
+Noses tugged.
+
+"These men are quite capable and paid a high price; all of them. Miss, what have you done for your Forest lately?" That last bit Verk thought might have a bit more sting than he meant."
+
+There was a muttering in the audience, and the mood, as it had been pretty much all along, got to be ever more glum. Even during his speak Verk had seem off, distracted, irritated. Was he well?
+
+"Miss, I mean every bit of love and respect for you, rhino-calf. Let us reflect on what happened and the true magnitude of it. Let us never forget..."
+
+"Yes, Father-Brother Verk." She managed a small curtsy and did sound legitimately regretful.
+
+"Sweet child, please have a seat."
+
+She nodded and sat.
+
+There was a rather long, very quiet murmur as parents discretely mouthed ideas to their children.
+
+One very small, sweet cavegirl todderted slightly as she stood, and made an exagerated bow. The audience, nervous and hyper-aware, giggled with surprising generosity.
+
+"Father-Brother Verk..." She had just a twist of endearing toddler speech, as she rolled her head self-consciously. She smiled, showing not a few missing teeth.
+
+"Father-Brother Verk, why do people have to die?"
+
+There it was, a gem that Verk could work with.
+
+"Sweet, sweet rhino-calf, please ...please come here." Verk was visibly moved.
+
+The girl tottered towards Verk, as he sat smiling in his fine stone throne. Half way there, Verk, with unbelievable slowness, began to raise his arms to receive the girl. His smile slowly broadening with similar uncanny slowness.
+
+The girl gave a little hop as Verk's arms, met with precision by the girl's underarms, lifted elegantly, rotated and plopped her in his lap.
+
+He made a gesture of caressing his heart and nodding his head slowly with a smile.
+
+"Sweet rhino-calf, what a precious question you ask. Can you say it again, real loudly so everyone can hear your question?"
+
+The girl perked up, faced the audience with cupped ands and in exaggerated toddler fashion, screamed impossibly loudly in the echoy burrow.
+
+She giggled and thrust her head into Verk's belly, still giggling loudly.
+
+"Yes indeed, tender-tuber, why must this terrible thing happen. Why must people die like this?!"
+
+In another fluid motion that belies his size and shape, Verk had set the girl down gently in front of him and seemed to have immediately forgotten her.
+
+He began to pace back and forth on /his/ large dias.
+
+He paced almost athletically, making sharp, possibly "military" about-faces at each end of the dias. His slightly pinker face was facing the floor at a fixed angle, as he paced.
+
+Suddenly he stopped in front of the throne, stiffened, adjusted his rhino-calf[fn:: Aside from being cute and a good way to express one's impressions when encountering something "dear", the /hide/ of a rhino calf was exactly the right combination, if slaughtered at the right time, in the right way, of supple, tough, and long-wearing. It made a perfect armour and, as it is comfortable, found its way into the "ceremonial" wardobe of many admired cavemen, actual solders and otherwise.] skin ceremonial uniform with dignity and began.
+
+#+begin_quote
+My admirable audience, men have to die because other men /are bad/! And that is it. Showing softness of any kind toward your /enemy/ is a big mistake. Once your enemy, always your enemy. Some things are not forgivable, and it is /essential/ that we as a Forest stick together and maintain that firce pride and unshamed love for this community of humble, hard working, honest men and baby-makers.
+
+/*It is essential*/
+#+end_quote
+
+Verk's voice cracked such that for the remainder of his speech he was noticeably hoarse.
+
+#+begin_quote
+It is for the Love of The Forest that my being is filled with this unstoppable surety that right will ultimately triumph.
+#+end_quote
+
 XXX Verk takes questions
 XXX Very first question is both completely reasonable and deeply offensive somehow.
 XXX one or two more, light banter
