--- a/_notes.org
+++ b/_notes.org
@@ -74,7 +74,7 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - Crec [singular and plural]: The Forest to which the Zog clan both lives and belongs. "Crec" can refer to the Forest or the people who live there.
 - drop-stone: A unit of time; about as long as it takes for a stone to hit the ground when dropped from an outstretched hand, on more or less level ground. They're as tall as you and used to inhibit the same planet. You figure it out.
 - elders-quorum: This is a sort of "The Senate" of a Forest (in cases where they have bothered). It's just as inept and entertaining as our analogs (diet, soviet, merikin, parliament, kremlin, house, neighborhood gang...)
-- Ender-Of-All-Questions: God. Just one, like you. You will encounter references to "the gods". This is, surprisily, used exactly as a modern, cynical teenager might use it: ironically. As in, "You are still such a tiresome superstitious moron that you probably believe in /multiple/ gods like in older, more primitive times."
+- Ender-Of-All-Questions: God. Just one, like you. You will encounter references to "the gods". Rather improbably, this is used exactly as a modern, cynical teenager might use it: ironically. As in, /You are still such a tiresome superstitious moron that you probably believe in/ multiple /gods like in older, more primitive times./
 - father-brother: Your father's brother. Your "uncle", but with more information.
 - food-clay: Shit
 - Forest-Deer: A political party (same deal) that composes exactly 50% of the Elders-Quorum (You should now be asking if these are the good ones.)
