--- a/_notes.org
+++ b/_notes.org
@@ -77,7 +77,7 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - Ender-Of-All-Questions: God. Just one, like you. You will encounter references to "the gods". Rather improbably, this is used exactly as a modern, cynical teenager might use it: ironically. As in, /You are still such a tiresome superstitious moron that you probably believe in/ multiple /gods like back in primitive times./
 - father-brother: Your father's brother. Your "uncle", but with more information.
 - food-clay: Shit
-- Forest-Deer: A political party (same deal) that composes exactly 50% of the Elders-Quorum (You should now be asking if these are the good ones.)
+- Forest-Deer: A political party (same deal) that composes exactly 50% of the Elders-Quorum (You should now be asking if these are the good guys.)
 - Forest: The largest organizing category of people, analogous to a nation.
 - juff: An alcoholic beverage made from fermented coconut flesh, and a polite quantity of spit from a special, designated virgin baby-maker, who is chosen yearly as the designated provider of spit (A custom that has been known to ruin some plans.)
 - jump-scare: Living in something like a giant ant hill, opportunities to e.g. hide around the corner and scare the food-clay out of someone abound. This is that.
