--- a/000-preface.org
+++ b/000-preface.org
@@ -55,7 +55,7 @@ And by the name of After-Die-Monster, signs of Father-Brother Verk's nearing mad
 
 That would mean another sun-palm at most.
 
-Grav's attention went back to Gher. "That's what /I/ keep saying." Hoping to shake Grav, as he knew a lecture was coming, he retired to his burrow to think about things.
+Grav's attention went back to Gher. "That's what /I/ keep saying." Hoping to shake Gher, as he knew a lecture was coming, he retired to his burrow to think about things.
 
 ---
 
@@ -65,7 +65,7 @@ Today Verk would tell all those who gathered (again, compulsory) in the ancient-
 
 "Shall we all be quiet and let you begin Father-Brother Verk, Son of Jit?", one of the several-finger caveladies doting over him.
 
-"Oh, well. I just." Verk noisily deposited a healthy quantity of bird-scat into a finely woven, and yet unavoidably course rag. "Whaaaa... Dortyses!!", he wailed at the ceiling as he sneezed. Verk had a severe allergy to a very poisonous flowering plant that more or less reproduced continuously.
+"Oh, well. I just." Verk noisily deposited a healthy quantity of bird-scat into a finely woven, and yet unavoidably course rag. "Whaaaa... dortyses[fn:: This is an adjective that means 'rubbery and resistant to mastication']!!", he wailed at the ceiling as he sneezed. Verk had a severe allergy to a very poisonous flowering plant that more or less reproduced continuously.
 
 "I'll get started. Thank you, rhino-calf."
 
@@ -85,23 +85,22 @@ The smash that was heard 'round the forest, as you know, marked its start, as a 
 What tipped us off was the crack of his sturdy-gourd-hat splitting in to. I just barely saved his life. From within the our tactical-burrow we could hear the shouts of the hated Clorp coming our way.
 
 #+end_quote
-Audience members duifully make faces of disghust at the mention of the name.
+Audience members dutifully make faces of disgust at the mention of the name.
 #+begin_quote
 
-XXX Some fighting and observing of fighting happens.
 It seemed like in no time at all the Clorp were climbing up the scree of Rhino-Scat, mere men away from me. They were slow. The going was slow, but there were many of them. It's a known fact that the ratio was 3 to 1, in /their/ favor.
 
 #+end_quote
 Measured gasp from the audience.
 #+begin_quote
 
-We were the defenders, which favors one in battle. They had to do all the slow and treturous scurrying. We just had to lob rocks down on them. But their number was great, as I mentioned, and soon we were quite literally running low on rocks[fn:: There having been a strike among the ammunition suppliers (they carry rocks up hill), resources ran low off and on through out Snake-Meal. The strikers supplied their last delivery in the form of their heads.].
+We were the defenders, which favors one in battle. They had to do all the slow and treacherous scurrying. We just had to lob rocks down on them. But their number was great, as I mentioned, and soon we were quite literally running low on rocks[fn:: There having been a strike among the ammunition suppliers (they carry rocks up hill), resources ran low off and on through out Snake-Meal. The strikers supplied their last delivery in the form of their heads.].
 
-Just then, my pal Lu and I realized that almost none of the troops were allowed to know about the boulder-rino up at the top! We looked at each other seemingly at the same time and both had the idea at the same time. "Are you thinking what I'm thinking?", I said. "/Let's go!/", said Lu.
+Just then, my pal Lu and I realized that almost none of the troops were allowed to know about the boulder-rhino up at the top! We looked at each other seemingly at the same time and both had the idea at the same time. "Are you thinking what I'm thinking?", I said. "/Let's go!/", said Lu.
 
-There it was after a gasping, wheezing sprint up the steep hill side, our "secret" weapon. Why it was kept secret to most of /our guys/ I still do not know to this day. It was complete alright, and pointed in exactly the right direction. Lu starts talking to me about which one of us is going to out there to the verge and give their life by unlodging the required stones, there not in that day being the idea yet of just tying some sturdy twist-vine to it and giving a pull from a safe distance.
+There it was after a gasping, wheezing sprint up the steep hill side, our "secret" weapon. Why it was kept secret to most of /our guys/ I still do not know to this day. It was complete alright, and pointed in exactly the right direction. Lu starts talking to me about which one of us is going to out there to the verge and give their life by dislodging the required stones, there not in that day being the idea yet of just tying some sturdy twist-vine to it and giving a pull from a safe distance.
 
-I had spied something on the way up and decided to have one over on old Lu. I say, 'well by rights, Lu, even as my friend, you need to be the one to go out there and do this. You know I got a family to support and my new possition at camp comes with a lot of responsibility, one that there just ain't a lot of good replacemnts for. You think for a minute about what old Corporal Bogh would say in this situation. I'm sorry Lu, but I'm thinking of the Forest here. My hand to Ender-Of-All-Questions, this is my thinking, Lu. I'm sorry. I'll hear you out my friend, but...
+I had spied something on the way up and decided to have one over on old Lu. I say, 'well by rights, Lu, even as my friend, you need to be the one to go out there and do this. You know I got a family to support and my new position at camp comes with a lot of responsibility, one that there just ain't a lot of good replacements for. You think for a minute about what old Corporal Bogh would say in this situation. I'm sorry Lu, but I'm thinking of the Forest here. My hand to Ender-Of-All-Questions, this is my thinking, Lu. I'm sorry. I'll hear you out my friend, but...
 
 We could see clearly that the Clorp were making ground, slowly. It looked like a great storm of people. Vast, like waves of blood an people washing up against the shores of Rhino-Scat. We had indeed gotten lost in time a bit about the urgency of our mission. The sight was awesome.
 
@@ -168,7 +167,7 @@ Verk was sure had covered this, and was duly annoyed. He stared at the boy for w
 
 "Little rhino-calf, do you remember me talking about that? It's not known nor is it to be known. You're a clever lad. Have a seat, please."
 
-A girl in her late teens, that could only cheritably be considered a child stood, /with some off-putting confidence/, Verk thought. Likely a lovely child. Well, shaped.
+A girl in her late teens, that could only charitably be considered a child stood, /with some off-putting confidence/, Verk thought. Likely a lovely child. Well, shaped.
 
 "Father-Brother Verk," Verk thought she had rushed the whole name thing, "Were there any other things we could have done to avoid all this dying, for everybody?"
 
@@ -192,7 +191,7 @@ She nodded and sat.
 
 There was a rather long, very quiet murmur as parents discretely mouthed ideas to their children.
 
-One very small, sweet cavegirl todderted slightly as she stood, and made an exagerated bow. The audience, nervous and hyper-aware, giggled with surprising generosity.
+One very small, sweet cavegirl tottered slightly as she stood, and made an exaggerated bow. The audience, nervous and hyper-aware, giggled with surprising generosity.
 
 "Father-Brother Verk..." She had just a twist of endearing toddler speech, as she rolled her head self-consciously. She smiled, showing not a few missing teeth.
 
@@ -210,7 +209,7 @@ He made a gesture of caressing his heart and nodding his head slowly with a smil
 
 "Sweet rhino-calf, what a precious question you ask. Can you say it again, real loudly so everyone can hear your question?"
 
-The girl perked up, faced the audience with cupped ands and in exaggerated toddler fashion, screamed impossibly loudly in the echoy burrow.
+The girl perked up, faced the audience with cupped ands and in exaggerated toddler fashion, screamed impossibly loudly in the echoey burrow.
 
 She giggled and thrust her head into Verk's belly, still giggling loudly.
 
@@ -218,14 +217,14 @@ She giggled and thrust her head into Verk's belly, still giggling loudly.
 
 In another fluid motion that belies his size and shape, Verk had set the girl down gently in front of him and seemed to have immediately forgotten her.
 
-He began to pace back and forth on /his/ large dias.
+He began to pace back and forth on /his/ large dais.
 
-He paced almost athletically, making sharp, possibly "military" about-faces at each end of the dias. His slightly pinker face was facing the floor at a fixed angle, as he paced.
+He paced almost athletically, making sharp, possibly "military" about-faces at each end of the dais. His slightly pinker face was facing the floor at a fixed angle, as he paced.
 
-Suddenly he stopped in front of the throne, stiffened, adjusted his rhino-calf[fn:: Aside from being cute and a good way to express one's impressions when encountering something "dear", the /hide/ of a rhino calf was exactly the right combination, if slaughtered at the right time, in the right way, of supple, tough, and long-wearing. It made a perfect armour and, as it is comfortable, found its way into the "ceremonial" wardobe of many admired cavemen, actual solders and otherwise.] skin ceremonial uniform with dignity and began.
+Suddenly he stopped in front of the throne, stiffened, adjusted his rhino-calf[fn:: Aside from being cute and a good way to express one's impressions when encountering something "dear", the /hide/ of a rhino calf was exactly the right combination, if slaughtered at the right time, in the right way, of supple, tough, and long-wearing. It made a perfect armor and, as it is comfortable, found its way into the "ceremonial" wardrobe of many admired cavemen, actual solders and otherwise.] skin ceremonial uniform with dignity and began.
 
 #+begin_quote
-My admirable audience, men have to die because other men /are bad/! And that is it. Showing softness of any kind toward your /enemy/ is a big mistake. Once your enemy, always your enemy. Some things are not forgivable, and it is /essential/ that we as a Forest stick together and maintain that firce pride and unshamed love for this community of humble, hard working, honest men and baby-makers.
+My admirable audience, men have to die because other men /are bad/! And that is it. Showing softness of any kind toward your /enemy/ is a big mistake. Once your enemy, always your enemy. Some things are not forgivable, and it is /essential/ that we as a Forest stick together and maintain that fierce pride and unashamed love for this community of humble, hard working, honest men and baby-makers.
 
 /*It is essential*/
 #+end_quote
@@ -235,13 +234,49 @@ Verk's voice cracked such that for the remainder of his speech he was noticeably
 #+begin_quote
 It is for the Love of The Forest that my being is filled with this unstoppable surety that right will ultimately triumph. Right will ultimately triumph.
 
-And the things that the /Clorp/ have /caused to come to pass/ sting less with every generation, but its unforgivable nature is eternal. Know that. Remember that. If you are Forgetting, you are betraying your Forest and 
+And the things that the /Clorp/ have /caused to come to pass/ sting less with every generation, but its unforgivable nature is eternal. Know that. Remember that. If you are Forgetting, you are betraying your Forest. Forgetting is /treason/!
 #+end_quote
 
-XXX Verk takes questions
-XXX Very first question is both completely reasonable and deeply offensive somehow.
-XXX one or two more, light banter
-XXX Some sweet widdle girl asks the question that Verk really wants to trumpet for his profound lesson.
-XXX Girl on lap
-XXX Verk repeats the fucking question about 6 times
-XXX Verk gives a triumphant-sounding, rouse the troops kind of speech that fundamentally makes no sense.
+Verk let that sink in, while staring tearfully above the heads of the audience. He had paused mid-gesture with his arms to his side and palms upward.
+
+The audience considered this for a while and waited for the next queue from lecturer. Verk slowly lowered and relaxed his arms, and then dramatically rest his chin on his chest, looking at the dais.
+
+The audience rightly guessed that this concluded his talk, and so cheered "reverently" as best they could.
+
+"Please think long and hard on this my dear people, as though your lies depend upon it. Now /who's ready for some thistle bread with mammoth icing!?/"
+
+Cries of excitement and joy[fn:: Examples include "gnuaah!", "vleeep!", and "kah-joing!"] erupted from the youngest of the clan. The older ones, also anticipating the joy of a good meal and fellowship silently concurred. They were also happy for this awkward and troubling xxx to be over.
+
+Verk stood smiling, still center-stage on the dais, nodding and smiling to the people as they filled towards the exits and into the all-clan-meal burrow for several relaxing sun-palm of food and banter. No one had eaten. Haste to prepare and receive Verk, along with nervousness had gotten in the way of even dawn-meal. Even if had been practical to sneak a bite, no one would have been seen eating on such a morning. Everyone felt the same way about a morning like this.
+
+Verk's gaze caught Grav as he sauntered into the meal burrow. Verk had is usual nonchalance about him and was unimpressed both with Verk's words and his passion. The passion added nothing. The words were confused and poorly connected. They sounded good to most of the audience, but Grav felt that if one had scratched all that out, using neutral language, others would see his point. He did a lot of scratching and was getting very fast at it. He thought he might try something like that some day to see if a literate caveperson would have the same reaction if the ideas were just presented clearly and without emotion.
+
+Grav looked back, looked forward at the meal burrow door and then swept his head back to Verk again. He was still staring, seemingly angrily. Grav smiled while their eyes remained locked and turned his head back in the direction he was headed in what he hopped was a polite, demur manor. Verk stood motionless as only his head followed the progress of Verk across the burrow. It appeared that his hands were slowly making fists. /He's probably just flexing his fingers/, Grav thought lamely. He'd have to get over Verk. Food!
+
+Much later, after a responsible (given the occasion) amount of juff and enough to eat (plus half again) for everyone, Grav found himself standing, bowed gently backwards, with most of his weight on his heels, urinating into the relief-hole at the far back corner of the relief-room. A couple of laughing, squealing verge-fertile baby-makers thoroughly woke everyone up as they darted behind him and out of the relief-room[fn:: Bathrooms are not separated by gender. This would strike the Crec as a truly inefficient and pointless arrangement.] enjoying their private joke; almost surely at the expense of some hapless teenage boy.
+
+To Grav's utter horror, and with an exaggerated shuffling of the feet Verk got situated in front of the relief-hole right next to him. He was smiling serenely, swaying almost imperceptibly, and reeking of juff and female-hippo-musk[fn:: Female hippo musk is indeed used as a perfume. However, as this is scarce and valuable, it is also used to just mean "perfume" or "cologne"].
+
+"My noble, hopeful, young elk-buck. It's Grav, yes? Grav, Son Of Zog? I wonder what you have planned for [word for going king->son-of-king]. I don't see or hear of any intrigue involving your younger brothers. Seems they have other plans and are happy with them. Here comes Grav clan, yes?", Verk says and winks drunkenly.
+
+Verk was a practiced drunk. It seemed like he affected some amount of drunkenness when sober /in addition to/ working hard at appearing sober when drunk. Verk had learned to work both ends of his spear. With this added to the almost universal instinct to look at Verk as a kind of infallible super-caveman resulted in the vast majority of others genuinely never suspecting he had much interest in juff. And was mostly always stone-sober[fn:: The Crec do not use this expression, but they do say "stone-drunk" for obvious reasons.] "He's as he always is, Dear Father-Brother Verk.", one would surely say with a smile.
+
+Verk's voice became calm, clear, and purposeful.
+
+"Here is what's what, you inept, disrespectful, ruinous young man." Verk closed his eyes and inhaled slowly and smoothly through his nose.
+
+"I know exactly what you are /thinking/, and what's more, I know exactly what you have /done/. It will not stand, and you will be made to pay. After which, I grant you the privileged of getting on your knees before all and convincing us of your /genuine/ remorse and renewed understanding."
+
+"You are my blood, and there is a bond and love that transcends almost all things. What you need to do is work hastily on the /almost/ before you cross a line, child."
+
+Verk's eyes opened and he smiled. His voice now was unnecessarily loud with an affected cheerfulness. He shook himself and said, "Clear enough young buck?" He slapped Verk's bare shoulder with his clean hand. "I will see /you/ at drill tomorrow, yes?" Verk's smile broadened and his form froze as he awaited a response.
+
+Thinking that he should acknowledge so that all in the burrow could hear, since the question was asked in such a way he loudly said, "Oh! Yes Father-Brother Verk! I will be there!". He could feel his lips quivering.
+
+"Very well!", Verk turned and left with a smile that swept the burrow. All were looking in his direction.
+
+Grav affected a casualness as he finished and casually made his way out of the crowded relief-burrow.
+
+Grav had yet-more, unwelcome thinking to do. He made his way to his burrow no longer shaken but stirred by Verks words.
+
+"What in the /Forest/ was that about?", he wondered.
