--- a/000-preface.org
+++ b/000-preface.org
@@ -219,7 +219,7 @@ In another fluid motion that belies his size and shape, Verk had set the girl do
 
 He began to pace back and forth on /his/ large dais.
 
-He paced almost athletically, making sharp, possibly "military" about-faces at each end of the dais. His slightly pinker face was facing the floor at a fixed angle, as he paced.
+He paced almost athletically, making sharp, possibly "military" about-faces at each end of the dais. His slightly pinker face was facing the floor at a fixed angle.
 
 Suddenly he stopped in front of the throne, stiffened, adjusted his rhino-calf[fn:: Aside from being cute and a good way to express one's impressions when encountering something "dear", the /hide/ of a rhino calf was exactly the right combination, if slaughtered at the right time, in the right way, of supple, tough, and long-wearing. It made a perfect armor and, as it is comfortable, found its way into the "ceremonial" wardrobe of many admired cavemen, actual solders and otherwise.] skin ceremonial uniform with dignity and began.
 
