--- a/_notes.org
+++ b/_notes.org
@@ -19,8 +19,13 @@ We take the reader back to Zog's early years. Zog current clan leader, and that'
 Let's have a from-birth to marriage fastforward, followed by tales of daring from his youth. And of course, displaying, entirely for what it is, his deeply held, more or less random believes that he's willing to club-fight over. Lots of adventures. Lots of badassery.
 
 The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
-...
+
+** Ch. 001, wh
+
+   
 ** Ch. 00~, wherin Grav starts studying to become a lawyer (though we have a clever name for it)
+...
+Note: Grav cleverly invents the concept of "lawyer", works hard to become one, folks realize that not just anyone should be allowed to be a lawyer as you can ruin people's lives (!) and so creates Official Criteria, which Grav cannot meet. Grav becomes the first lawyer to exist and then the first law school student to fail the Bar (what funny word instead of "bar"? "stick"?) exam.
 ...
 ** Ch. 00~, wherin Gog scratches "boulder-stump" into a soot-pallet and shouts it from atop Lame-Monkey Mountain three times on a dare
 ...
@@ -36,9 +41,13 @@ The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
 
 * Notes
 
+- Don't ever forget to make the good guys bad. There should be lots of people "signaling" who are Forest-Deer die-hards and act hella retarded.
+- There must be lots and lots of "public works" of every kind. We let the Elders-Quarum decide how to spend N% or our money and then get outraged when it's not used "correctly". Rocks, clubs, clubs with sharp sticks in them...
 - Everyone is a caveperson. It's as appropriate to say "cavelady" as it is to say "lady".
 - The feeling is light and easy like a mockumentary. The narrator is just "me", so I don't have to remember what "voice" I'm using.
 - No humorous-fake-terms for things that /they/ have and /we/ have a name for. For example, no need to call a tree a "massive-weed" or to call a cat a "gerbil-dog". Or maybe yes do that. It would be pretty sweet if Crecspeak words got a special tag so we can identify, use special fonts, check for glossary leaks...
+- Have a "global warning" analog
+-
 
 * Ephemeral Notes
 
